add transação parcelada